[package]
name = "voicevox_core_node_api"
version = "0.1.0"
authors = ["ashigirl96"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
voicevox_core = { git = "https://github.com/VOICEVOX/voicevox_core", tag = "0.14.4" }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
