[package]
name = "neon-build"
version = "0.1.0"
authors = ["ashigirl96"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]
build = "build.rs"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
voicevox_core = { git = "https://github.com/VOICEVOX/voicevox_core", branch = "main" }
log = "0.4.20"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
